--- a/server/app/views/sync_run_mailer/status_email.html.erb
+++ b/server/app/views/sync_run_mailer/status_email.html.erb
@@ -1,8 +1,8 @@
+<!-- app/views/sync_run_mailer/status_email.html.erb -->
 <!DOCTYPE html>
 <html>
 <head>
   <style>
-    <% color = @sync_status == "success" ? '#33C0A7' : '#F54C3D' %>
     .email-body {
       background-color: #333;
       color: white;
@@ -17,25 +17,23 @@
       display: inline-block;
       padding: 10px 20px;
       margin: 20px 0;
-      background-color: <%= color %>;
+      background-color: <%= @sync_status == "success" ? '#33C0A7' : '#F54C3D' %>;
       color: white;
       text-decoration: none;
       font-weight: bold;
       border-radius: 5px;
     }
     .status {
-      color: <%= color %>;
+      color: <%= @sync_status == "success" ? '#33C0A7' : '#F54C3D' %>;
       font-weight: bold;
     }
   </style>
 </head>
 <body>
   <div class="email-body">
-    <p>Salesforce to SFTP Test job was <%= @sync_status == "success" ? '<span class="status">successful</span>' : '<span class="status">failure</span>' %>. 
-       Please click the Sync Run link below to view more details.
-    </p>
+    <p><%= @source_connector_name %> to <%= @destination_connector_name %> job was <span class="status"><%= @sync_status == "success" ? "successful" : "failure" %></span>. Please click the Sync Run link below to view more details.</p>
     <div class="button-container">
-      <a href="<%= @url %>" class="button">Sync Run</a>
+      <a href="<%= @sync_run_url %>" class="button">Sync Run</a>
     </div>
   </div>
 </body>
