--- a/server/app/views/devise/mailer/invitation_instructions.html.erb
+++ b/server/app/views/devise/mailer/invitation_instructions.html.erb
@@ -1,4 +1,4 @@
-<% query_params = { invited: true, invitation_token: @token,workspace_id: @workspace.id} %>
+<% query_params = { invited: true, workspace_id: @workspace.id, workspace_name: @workspace.name, invited_by: @resource.invited_by.name } %>
 
 <% custom_url = "#{ENV["UI_HOST"]}?#{query_params.to_query}" %>
 
