Resolve conflict in cherry-pick of d26106d2600205e3f749f63fbbc5895d46760517 and change the commit message

--- a/server/app/views/devise/mailer/password_change.html.erb
+++ b/server/app/views/devise/mailer/password_change.html.erb
@@ -54,24 +54,40 @@
                     margin: 0;
                   "
                 >
-                  Your password has been changed
+                  Password changed
                 </h1>
-              </td>
-            </tr>
-            <tr>
-              <td style="padding: 12px; text-align: left">
                 <p
                   style="
-                    color: #101828;
+                    color: #475467;
                     font-size: 14px;
                     font-family: Helvetica, Arial, sans-serif;
-                    font-weight: 700;
+                    font-weight: 400;
                     line-height: 20px;
-                    margin: 0;
                   "
                 >
-                  <br />Cheers,<br />Team AI Squared
+                  Your password has been changed successfully. If you did not make this change, please reset your password immediately.
                 </p>
+                <a
+                  href="https://app.squared.ai/"
+                  style="display: inline-block; text-decoration: none"
+                >
+                  <button
+                    style="
+                      background: #00249c;
+                      border: none;
+                      border-radius: 6px;
+                      color: white;
+                      font-size: 14px;
+                      font-family: Helvetica, Arial, sans-serif;
+                      font-weight: 700;
+                      line-height: 20px;
+                      padding: 10px 20px;
+                      cursor: pointer;
+                    "
+                  >
+                    Login to AI Squared
+                  </button>
+                </a>
               </td>
             </tr>
             <tr>
