--- a/server/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/server/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<% reset_url = "#{ENV['UI_HOST']}/reset_password?reset_password_token=#{@token}" %>
+<% reset_url = "#{ENV['UI_HOST']}/reset-password?reset_password_token=#{@token}" %>
 <html>
   <body
     style="
@@ -104,8 +104,7 @@
                     margin: 0;
                   "
                 >
-                  This link will expire after it is clicked once. Please use it
-                  to reset your password.
+                  This link will expire on <%= (@resource.reset_password_sent_at + Devise.reset_password_within) %>. Please use it to reset your password.
                 </p>
                 <p
                   style="
