fix(CE): update the reset password email (#310)

--- a/server/app/views/devise/mailer/password_change.html.erb
+++ b/server/app/views/devise/mailer/password_change.html.erb
@@ -1,17 +1,10 @@
 <!DOCTYPE html>
+<% reset_url = "#{ENV['UI_HOST']}/reset-password?reset_password_token=#{@token}" %>
 <html>
-  <body
-    style="
-      margin: 0;
-      text-align: center;
-      height: 100vh;
-      width: 100vw;
-      padding: 20px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    "
-  >
+  <head>
+    <meta http-equiv="Content-Type" content="text/html charset=UTF-8" />
+  </head>
+  <body style="margin: 0; text-align: center; width: 100vw; padding: 20px">
     <table style="margin: 0; padding: 0; border-collapse: collapse">
       <tr>
         <td valign="middle">
@@ -98,13 +91,10 @@
                   font-size: 12px;
                   color: #98a2b3;
                   font-family: Helvetica, Arial, sans-serif;
-                  display: flex;
-                  flex-direction: row;
-                  justify-content: space-between;
                 "
               >
-                <div>
-                  <p style="margin: 0">
+                <table>
+                  <p style="margin: 0; display: inline; float: left">
                     <a
                       href="#"
                       style="color: #98a2b3; text-decoration: underline"
@@ -123,14 +113,18 @@
                       >Contact Us</a
                     >
                   </p>
-                  <p style="margin: 0">
+                  <p style="margin: 0; display: inline; float: right">
+                    AI Squared, 1300 I Street NW,
+                  </p>
+                </table>
+                <table style="text-align: end">
+                  <p style="margin: 0; display: inline; float: left">
                     © 2024 AI Squared. All Rights Reserved.
                   </p>
-                </div>
-                <div style="text-align: end">
-                  <p style="margin: 0">AI Squared, 1300 I Street NW,</p>
-                  <p style="margin: 0">Suite 400 E, Washington, DC 20005</p>
-                </div>
+                  <p style="margin: 0; display: inline; float: right">
+                    Suite 400 E, Washington, DC 20005
+                  </p>
+                </table>
               </td>
             </tr>
           </table>
