--- a/server/app/views/devise/mailer/invitation_instructions.html.erb
+++ b/server/app/views/devise/mailer/invitation_instructions.html.erb
@@ -1,17 +1,9 @@
 <!DOCTYPE html>
 <html>
-  <body
-    style="
-      margin: 0;
-      text-align: center;
-      height: 100vh;
-      width: 100vw;
-      padding: 20px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    "
-  >
+  <head>
+    <meta http-equiv="Content-Type" content="text/html charset=UTF-8" />
+  </head>
+  <body style="margin: 0; text-align: center; width: 100vw; padding: 20px">
     <table style="margin: 0; padding: 0; border-collapse: collapse">
       <tr>
         <td valign="middle">
@@ -65,7 +57,7 @@
                     line-height: 20px;
                   "
                 >
-                	<%= "#{@resource.invited_by.name} has invited you to use AI Squared with them, in a workspace called #{@workspace.name}." %>
+                  <%= "#{@resource.invited_by.name} has invited you to use AI Squared with them, in a workspace called #{@workspace.name}." %>
                 </p>
                 <% query_params = { invited: true, invited_user:@resource.email, invitation_token: @token, workspace_id: @workspace.id, workspace_name: @workspace.name, invited_by: 	@resource.invited_by.name } %>
                 <% custom_url = "#{ENV['UI_HOST']}/sign-up?#{query_params.to_query}" %>
@@ -104,11 +96,10 @@
                     margin: 0;
                   "
                 >
-                   <% if @resource.invitation_due_at %>
-  					<p><%= t("devise.mailer.invitation_instructions.accept_until", due_date: l(@resource.invitation_due_at, format: :'devise.mailer.invitation_instructions.accept_until_format')) %>
-  					</p>
-					<% end %>
-                   This invitation will expire by July 8, 2024 at 10:10 PM. Cheers, Team AI Squared
+                  <% if @resource.invitation_due_at %>
+                    <p><%= t("devise.mailer.invitation_instructions.accept_until", due_date: l(@resource.invitation_due_at, format: :'devise.mailer.invitation_instructions.accept_until_format')) %>
+                    </p>
+                  <% end %>
                 </p>
                 <p
                   style="
@@ -132,13 +123,10 @@
                   font-size: 12px;
                   color: #98a2b3;
                   font-family: Helvetica, Arial, sans-serif;
-                  display: flex;
-                  flex-direction: row;
-                  justify-content: space-between;
                 "
               >
-                <div>
-                  <p style="margin: 0">
+                <table>
+                  <p style="margin: 0; display: inline; float: left">
                     <a
                       href="#"
                       style="color: #98a2b3; text-decoration: underline"
@@ -157,14 +145,18 @@
                       >Contact Us</a
                     >
                   </p>
-                  <p style="margin: 0">
+                  <p style="margin: 0; display: inline; float: right">
+                    AI Squared, 1300 I Street NW,
+                  </p>
+                </table>
+                <table style="text-align: end">
+                  <p style="margin: 0; display: inline; float: left">
                     © 2024 AI Squared. All Rights Reserved.
                   </p>
-                </div>
-                <div style="text-align: end">
-                  <p style="margin: 0">AI Squared, 1300 I Street NW,</p>
-                  <p style="margin: 0">Suite 400 E, Washington, DC 20005</p>
-                </div>
+                  <p style="margin: 0; display: inline; float: right">
+                    Suite 400 E, Washington, DC 20005
+                  </p>
+                </table>
               </td>
             </tr>
           </table>
