--- a/server/app/views/devise/mailer/invitation_instructions.html.erb
+++ b/server/app/views/devise/mailer/invitation_instructions.html.erb
@@ -3,165 +3,167 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html charset=UTF-8" />
   </head>
-  <body style="margin: 0; text-align: center; width: 100vw; padding: 20px">
-    <table style="margin: 0; padding: 0; border-collapse: collapse">
-      <tr>
-        <td valign="middle">
-          <table
-            style="
-              width: 100%;
-              max-width: 600px;
-              background: #f9fafb;
-              padding: 20px;
-              border-radius: 12px;
-              border: 1px #eaecf0 solid;
-            "
-          >
-            <tr>
-              <td style="text-align: center; padding: 12px">
-                <img
-                  src="https://squared.ai/wp-content/uploads/2024/04/ai-squared-r-logo.png"
-                  style="width: 100%; max-width: 178px"
-                  alt="AI Squared Logo"
-                />
-              </td>
-            </tr>
-            <tr>
-              <td
-                style="
-                  background: white;
-                  border-radius: 8px;
-                  border: 1px #eaecf0 solid;
-                  padding: 48px 16px;
-                  text-align: center;
-                "
-              >
-                <h1
+  <body style="margin: 0; text-align: center; padding: 20px">
+    <div style="display: flex; justify-content: center; align-items: center; width: 100%; height: 100%;">
+      <table style="margin: 0; padding: 0; border-collapse: collapse">
+        <tr>
+          <td valign="middle">
+            <table
+              style="
+                width: 100%;
+                max-width: 600px;
+                background: #f9fafb;
+                padding: 20px;
+                border-radius: 12px;
+                border: 1px #eaecf0 solid;
+              "
+            >
+              <tr>
+                <td style="text-align: center; padding: 12px">
+                  <img
+                    src="https://squared.ai/wp-content/uploads/2024/04/ai-squared-r-logo.png"
+                    style="width: 100%; max-width: 178px"
+                    alt="AI Squared Logo"
+                  />
+                </td>
+              </tr>
+              <tr>
+                <td
                   style="
-                    color: #101828;
-                    font-size: 28px;
-                    font-family: Helvetica, Arial, sans-serif;
-                    font-weight: 700;
-                    line-height: 36px;
-                    margin: 0;
+                    background: white;
+                    border-radius: 8px;
+                    border: 1px #eaecf0 solid;
+                    padding: 48px 16px;
+                    text-align: center;
                   "
                 >
-                  Join your team in AI Squared
-                </h1>
-                <p
-                  style="
-                    color: #475467;
-                    font-size: 14px;
-                    font-family: Helvetica, Arial, sans-serif;
-                    font-weight: 400;
-                    line-height: 20px;
-                  "
-                >
-                  <%= "#{@resource.invited_by.name} has invited you to use AI Squared with them, in a workspace called #{@workspace.name}." %>
-                </p>
-                <% query_params = { invited: true, invited_user:@resource.email, invitation_token: @token, workspace_id: @workspace.id, workspace_name: @workspace.name, invited_by: 	@resource.invited_by.name } %>
-                <% custom_url = @is_verified ? "#{ENV['UI_HOST']}/sign-in" : "#{ENV['UI_HOST']}/sign-up?#{query_params.to_query}" %>
-                <a
-                  href="<%= custom_url %>"
-                  style="display: inline-block; text-decoration: none"
-                >
-                  <button
+                  <h1
                     style="
-                      background: #00249c;
-                      border: none;
-                      border-radius: 6px;
-                      color: white;
+                      color: #101828;
+                      font-size: 28px;
+                      font-family: Helvetica, Arial, sans-serif;
+                      font-weight: 700;
+                      line-height: 36px;
+                      margin: 0;
+                    "
+                  >
+                    Join your team in AI Squared
+                  </h1>
+                  <p
+                    style="
+                      color: #475467;
+                      font-size: 14px;
+                      font-family: Helvetica, Arial, sans-serif;
+                      font-weight: 400;
+                      line-height: 20px;
+                    "
+                  >
+                    <%= "#{@resource.invited_by.name} has invited you to use AI Squared with them, in a workspace called #{@workspace.name}." %>
+                  </p>
+                  <% query_params = { invited: true, invited_user:@resource.email, invitation_token: @token, workspace_id: @workspace.id, workspace_name: @workspace.name, invited_by: 	@resource.invited_by.name } %>
+                  <% custom_url = @is_verified ? "#{ENV['UI_HOST']}/sign-in" : "#{ENV['UI_HOST']}/sign-up?#{query_params.to_query}" %>
+                  <a
+                    href="<%= custom_url %>"
+                    style="display: inline-block; text-decoration: none"
+                  >
+                    <button
+                      style="
+                        background: #00249c;
+                        border: none;
+                        border-radius: 6px;
+                        color: white;
+                        font-size: 14px;
+                        font-family: Helvetica, Arial, sans-serif;
+                        font-weight: 700;
+                        line-height: 20px;
+                        padding: 10px 20px;
+                        cursor: pointer;
+                      "
+                    >
+                      Join Workspace
+                    </button>
+                  </a>
+                </td>
+              </tr>
+              <tr>
+                <td style="padding: 12px; text-align: left">
+                  <p
+                    style="
+                      color: #98a2b3;
+                      font-size: 14px;
+                      font-family: Helvetica, Arial, sans-serif;
+                      font-weight: 400;
+                      line-height: 20px;
+                      margin: 0;
+                    "
+                  >
+                    <% if !@is_verified && @resource.invitation_due_at %>
+                      <p><%= t("devise.mailer.invitation_instructions.accept_until", due_date: l(@resource.invitation_due_at, format: :'devise.mailer.invitation_instructions.accept_until_format')) %>
+                      </p>
+                    <% end %>
+                  </p>
+                  <p
+                    style="
+                      color: #101828;
                       font-size: 14px;
                       font-family: Helvetica, Arial, sans-serif;
                       font-weight: 700;
                       line-height: 20px;
-                      padding: 10px 20px;
-                      cursor: pointer;
+                      margin: 0;
                     "
                   >
-                    Join Workspace
-                  </button>
-                </a>
-              </td>
-            </tr>
-            <tr>
-              <td style="padding: 12px; text-align: left">
-                <p
+                    <br />Cheers,<br />Team AI Squared
+                  </p>
+                </td>
+              </tr>
+              <tr>
+                <td
                   style="
+                    padding: 12px;
+                    text-align: left;
+                    font-size: 12px;
                     color: #98a2b3;
-                    font-size: 14px;
                     font-family: Helvetica, Arial, sans-serif;
-                    font-weight: 400;
-                    line-height: 20px;
-                    margin: 0;
                   "
                 >
-                  <% if !@is_verified && @resource.invitation_due_at %>
-                    <p><%= t("devise.mailer.invitation_instructions.accept_until", due_date: l(@resource.invitation_due_at, format: :'devise.mailer.invitation_instructions.accept_until_format')) %>
+                  <table>
+                    <p style="margin: 0; display: inline; float: left">
+                      <a
+                        href="#"
+                        style="color: #98a2b3; text-decoration: underline"
+                        >Our blog</a
+                      >
+                      |
+                      <a
+                        href="#"
+                        style="color: #98a2b3; text-decoration: underline"
+                        >Docs</a
+                      >
+                      |
+                      <a
+                        href="#"
+                        style="color: #98a2b3; text-decoration: underline"
+                        >Contact Us</a
+                      >
                     </p>
-                  <% end %>
-                </p>
-                <p
-                  style="
-                    color: #101828;
-                    font-size: 14px;
-                    font-family: Helvetica, Arial, sans-serif;
-                    font-weight: 700;
-                    line-height: 20px;
-                    margin: 0;
-                  "
-                >
-                  <br />Cheers,<br />Team AI Squared
-                </p>
-              </td>
-            </tr>
-            <tr>
-              <td
-                style="
-                  padding: 12px;
-                  text-align: left;
-                  font-size: 12px;
-                  color: #98a2b3;
-                  font-family: Helvetica, Arial, sans-serif;
-                "
-              >
-                <table>
-                  <p style="margin: 0; display: inline; float: left">
-                    <a
-                      href="#"
-                      style="color: #98a2b3; text-decoration: underline"
-                      >Our blog</a
-                    >
-                    |
-                    <a
-                      href="#"
-                      style="color: #98a2b3; text-decoration: underline"
-                      >Docs</a
-                    >
-                    |
-                    <a
-                      href="#"
-                      style="color: #98a2b3; text-decoration: underline"
-                      >Contact Us</a
-                    >
-                  </p>
-                  <p style="margin: 0; display: inline; float: right">
-                    AI Squared, 1300 I Street NW,
-                  </p>
-                </table>
-                <table style="text-align: end">
-                  <p style="margin: 0; display: inline; float: left">
-                    © 2024 AI Squared. All Rights Reserved.
-                  </p>
-                  <p style="margin: 0; display: inline; float: right">
-                    Suite 400 E, Washington, DC 20005
-                  </p>
-                </table>
-              </td>
-            </tr>
-          </table>
-        </td>
-      </tr>
-    </table>
+                    <p style="margin: 0; display: inline; float: right">
+                      AI Squared, 1300 I Street NW,
+                    </p>
+                  </table>
+                  <table style="text-align: end">
+                    <p style="margin: 0; display: inline; float: left">
+                      © 2024 AI Squared. All Rights Reserved.
+                    </p>
+                    <p style="margin: 0; display: inline; float: right">
+                      Suite 400 E, Washington, DC 20005
+                    </p>
+                  </table>
+                </td>
+              </tr>
+            </table>
+          </td>
+        </tr>
+      </table>
+    </div>
   </body>
 </html>
