--- a/server/app/views/devise/mailer/invitation_instructions.html.erb
+++ b/server/app/views/devise/mailer/invitation_instructions.html.erb
@@ -58,9 +58,9 @@
                       line-height: 20px;
                     "
                   >
-                    <%= "#{@resource.invited_by.name} has invited you to use AI Squared with them, in a workspace called #{@workspace.name}." %>
+                    <%= "#{@resource.invited_by.name} has invited you to use AI Squared with them, in a company called #{@workspace.organization.name}." %>
                   </p>
-                  <% query_params = { invited: true, invited_user:@resource.email, invitation_token: @token, workspace_id: @workspace.id, workspace_name: @workspace.name, invited_by: 	@resource.invited_by.name } %>
+                  <% query_params = { invited: true, invited_user:@resource.email, invitation_token: @token, workspace_id: @workspace.id, workspace_name: @workspace.name, organization_name: @workspace.organization.name, invited_by: 	@resource.invited_by.name } %>
                   <% custom_url = @is_verified ? "#{ENV['UI_HOST']}/sign-in" : "#{ENV['UI_HOST']}/sign-up?#{query_params.to_query}" %>
                   <a
                     href="<%= custom_url %>"
@@ -152,7 +152,7 @@
                   </table>
                   <table style="text-align: end">
                     <p style="margin: 0; display: inline; float: left">
-                      © 2024 AI Squared. All Rights Reserved.
+                      © <%= Time.current.year %> AI Squared. All Rights Reserved.
                     </p>
                     <p style="margin: 0; display: inline; float: right">
                       Suite 400 E, Washington, DC 20005
