Update the text and images in the email templates

--- a/server/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/server/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -23,9 +23,9 @@
               <tr>
                 <td style="text-align: center; padding: 12px">
                   <img
-                    src="https://squared.ai/wp-content/uploads/2024/04/ai-squared-r-logo.png"
+                    src="<%= ENV['API_HOST'] %>/audience-logo.svg"
                     style="width: 100%; max-width: 178px"
-                    alt="AI Squared Logo"
+                    alt="Audiencelab Logo"
                   />
                 </td>
               </tr>
@@ -60,7 +60,7 @@
                       line-height: 20px;
                     "
                   >
-                    To complete signup and start using AI Squared, just click the verification button below.
+                    To complete signup and start using Audiencelab, just click the verification button below.
                   </p>
                   <a
                     href="<%= confirmation_url %>"
@@ -110,7 +110,7 @@
                       margin: 0;
                     "
                   >
-                    <br />Cheers,<br />Team AI Squared
+                    <br />Cheers,<br />Team Audiencelab
                   </p>
                 </td>
               </tr>
@@ -130,13 +130,13 @@
                   <div>
                     <p style="margin: 0">
                       <a
-                        href="https://blog.squared.ai/"
+                        href="https://audiencelab.io/category/resources/workshop/"
                         style="color: #98a2b3; text-decoration: underline"
                         >Our blog</a
                       >
                       |
                       <a
-                        href="https://docs.squared.ai/"
+                        href="https://docs.audiencelab.io/"
                         style="color: #98a2b3; text-decoration: underline"
                         >Docs</a
                       >
@@ -148,12 +148,12 @@
                       >
                     </p>
                     <p style="margin: 0">
-                      © 2025 AI Squared. All Rights Reserved.
+                      © 2025 Audiencelab. All Rights Reserved.
                     </p>
                   </div>
                   <div style="text-align: end">
-                    <p style="margin: 0">AI Squared, 1300 I Street NW,</p>
-                    <p style="margin: 0">Suite 400 E, Washington, DC 20005</p>
+                    <p style="margin: 0">Audiencelab, 1207 Delaware Ave</p>
+                    <p style="margin: 0">#390 Wilmington, DE 19806, Wilmington, Delaware 19806</p>
                   </div>
                 </td>
               </tr>
