--- a/server/app/views/sync_alert_mailer/sync_row_failure_email.html.erb
+++ b/server/app/views/sync_alert_mailer/sync_row_failure_email.html.erb
@@ -185,13 +185,13 @@
                 <table>
                   <p style="margin: 0; display: inline; float: left">
                     <a
-                      href="#"
+                      href="https://audiencelab.io/category/resources/workshop/"
                       style="color: #98a2b3; text-decoration: underline"
                       >Our blog</a
                     >
                     |
                     <a
-                      href="#"
+                      href="https://docs.audiencelab.io/"
                       style="color: #98a2b3; text-decoration: underline"
                       >Docs</a
                     >
@@ -203,15 +203,15 @@
                     >
                   </p>
                   <p style="margin: 0; display: inline; float: right">
-                    AI Squared, 1300 I Street NW,
+                    Audiencelab, 1207 Delaware Ave
                   </p>
                 </table>
                 <table style="text-align: end">
                   <p style="margin: 0; display: inline; float: left">
-                    © 2024 AI Squared. All Rights Reserved.
+                    © 2024 Audiencelab. All Rights Reserved.
                   </p>
                   <p style="margin: 0; display: inline; float: right">
-                    Suite 400 E, Washington, DC 20005
+                    #390 Wilmington, DE 19806, Wilmington, Delaware 19806
                   </p>
                 </table>
               </td>
