--- a/server/app/views/sync_alert_mailer/sync_success_email.html.erb
+++ b/server/app/views/sync_alert_mailer/sync_success_email.html.erb
@@ -51,9 +51,9 @@
             <tr>
               <td style="text-align: center; padding: 12px">
                 <img
-                  src="https://squared.ai/wp-content/uploads/2024/04/ai-squared-r-logo.png"
+                  src="<%= ENV['API_HOST'] %>/audience-logo.svg"
                   style="width: 100%; max-width: 178px"
-                  alt="AI Squared Logo"
+                  alt="Audiencelab Logo"
                 />
               </td>
             </tr>
@@ -182,13 +182,13 @@
                 <table>
                   <p style="margin: 0; display: inline; float: left">
                     <a
-                      href="#"
+                      href="https://audiencelab.io/category/resources/workshop/"
                       style="color: #98a2b3; text-decoration: underline"
                       >Our blog</a
                     >
                     |
                     <a
-                      href="#"
+                      href="https://docs.audiencelab.io/"
                       style="color: #98a2b3; text-decoration: underline"
                       >Docs</a
                     >
@@ -200,15 +200,15 @@
                     >
                   </p>
                   <p style="margin: 0; display: inline; float: right">
-                    AI Squared, 1300 I Street NW,
+                    Audiencelab, 1207 Delaware Ave
                   </p>
                 </table>
                 <table style="text-align: end">
                   <p style="margin: 0; display: inline; float: left">
-                    © 2024 AI Squared. All Rights Reserved.
+                    © 2024 Audiencelab. All Rights Reserved.
                   </p>
                   <p style="margin: 0; display: inline; float: right">
-                    Suite 400 E, Washington, DC 20005
+                    #390 Wilmington, DE 19806, Wilmington, Delaware 19806
                   </p>
                 </table>
               </td>
