Managed the Contact Us link and formatted the address text.

--- a/server/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/server/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -142,7 +142,7 @@
                       >
                       |
                       <a
-                        href="https://squared.ai/contact/"
+                        href="https://audiencelab.io/"
                         style="color: #98a2b3; text-decoration: underline"
                         >Contact Us</a
                       >
@@ -152,8 +152,8 @@
                     </p>
                   </div>
                   <div style="text-align: end">
-                    <p style="margin: 0">Audiencelab, 1207 Delaware Ave</p>
-                    <p style="margin: 0">#390 Wilmington, DE 19806, Wilmington, Delaware 19806</p>
+                    <p style="margin: 0">Audiencelab, 1207 Delaware Ave #390 Wilmington,</p>
+                    <p style="margin: 0">DE 19806, Wilmington, Delaware 19806</p>
                   </div>
                 </td>
               </tr>
