--- a/server/app/views/sync_alert_mailer/sync_failure_email.html.erb
+++ b/server/app/views/sync_alert_mailer/sync_failure_email.html.erb
@@ -198,13 +198,13 @@
                     >
                     |
                     <a
-                      href="#"
+                      href="https://audiencelab.io/"
                       style="color: #98a2b3; text-decoration: underline"
                       >Contact Us</a
                     >
                   </p>
                   <p style="margin: 0; display: inline; float: right">
-                    Audiencelab, 1207 Delaware Ave
+                    Audiencelab, 1207 Delaware Ave #390 Wilmington,
                   </p>
                 </table>
                 <table style="text-align: end">
@@ -212,7 +212,7 @@
                     © 2024 Audiencelab. All Rights Reserved.
                   </p>
                   <p style="margin: 0; display: inline; float: right">
-                    #390 Wilmington, DE 19806, Wilmington, Delaware 19806
+                    DE 19806, Wilmington, Delaware 19806
                   </p>
                 </table>
               </td>
