--- a/server/app/views/devise/mailer/password_change.html.erb
+++ b/server/app/views/devise/mailer/password_change.html.erb
@@ -109,13 +109,13 @@
                       >
                       |
                       <a
-                        href="#"
+                        href="https://audiencelab.io/"
                         style="color: #98a2b3; text-decoration: underline"
                         >Contact Us</a
                       >
                     </p>
                     <p style="margin: 0; display: inline; float: right">
-                      Audiencelab, 1207 Delaware Ave
+                      Audiencelab, 1207 Delaware Ave #390 Wilmington,
                     </p>
                   </table>
                   <table style="text-align: end">
@@ -123,7 +123,7 @@
                       © 2024 Audiencelab. All Rights Reserved.
                     </p>
                     <p style="margin: 0; display: inline; float: right">
-                      #390 Wilmington, DE 19806, Wilmington, Delaware 19806
+                       DE 19806, Wilmington, Delaware 19806
                     </p>
                   </table>
                 </td>
