refactor(CE): Update View Sync Run button for Slack (#1104)
Co-authored-by: sangkum <sangit.kumar@squared.ai>

--- a/server/app/views/sync_alert_mailer/sync_row_failure_email.html.erb
+++ b/server/app/views/sync_alert_mailer/sync_row_failure_email.html.erb
@@ -79,8 +79,8 @@
                 <p style="color: #475467; font-size: 14px; font-weight: 400; margin-bottom: 20px;">
                   <%= "Your sync #{@alert_attrs[:name]} completed, but some rows encountered errors." %>
                 </p>
-                <a href="<%= @sync_run_url %>" class="button">
-                  View Sync Run
+                <a href="<%= @sync_run_url %>" style="background: #00249c; color: white; font-size: 14px; font-weight: 700; border-radius: 6px; padding: 10px 20px; display: inline-block; text-decoration: none;"> 
+                  View Sync Run 
                 </a>
 
                 <table class="info-table">
